--- a/FunMan/authorization/templates/authorization/home.html
+++ b/FunMan/authorization/templates/authorization/home.html
@@ -1,11 +1,80 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'authorization/css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Ligconsolata:wght@300;400;700&display=swap" rel="stylesheet">  
     <title>Home</title>
 </head>
-<body>
-    <h1>HOME</h1>
+<body class="home-page">
+    <div class="home-left-block">
+        <img src="{% static 'authorization/img/v24_18.png' %}" alt="" class="home-logo">
+        <nav>
+            <button class="nav-btn">
+                <div class="vis-nav-btn">
+                    <img src="{% static 'authorization/img/home-icon.png' %}" alt=""> 
+                    <p>Home</p>
+                </div>
+            </button>
+            <button class="nav-btn">
+                <div class="vis-nav-btn">
+                    <img src="{% static 'authorization/img/messages-icon.png' %}" alt=""> 
+                    <p>Messages</p>
+                </div>
+            </button>
+            <button class="nav-btn">
+                <div class="vis-nav-btn">
+                    <img src="{% static 'authorization/img/profile-icon.png' %}" alt=""> 
+                    <p>Profile</p>
+                </div>
+            </button>
+            <button class="nav-btn">
+                <div class="vis-nav-btn">
+                    <img src="{% static 'authorization/img/search-icon.png' %}" alt=""> 
+                    <p>Search</p>
+                </div>
+            </button>
+            <button class="nav-btn">
+                <div class="vis-nav-btn">
+                    <img src="{% static 'authorization/img/bookmarks-icon.png' %}" alt=""> 
+                    <p>Bookmarks</p>
+                </div>
+            </button>
+            <button class="nav-btn">
+                <div class="vis-nav-btn">
+                    <img src="{% static 'authorization/img/community-icon.png' %}" alt=""> 
+                    <p>Community</p>
+                </div>
+            </button>
+            <button class="nav-btn">
+                <div class="vis-nav-btn">
+                    <img src="{% static 'authorization/img/lists-icon.png' %}" alt=""> 
+                    <p>Lists</p>
+                </div>
+            </button>
+            <button class="nav-btn nav-post-btn">
+                <div class="vis-nav-btn">
+                    <p>Post</p>
+                </div>
+            </button>
+        </nav>
+
+        
+            
+        
+        
+        
+    
+    
+    
+    </div>
+    <div class="home-centre-block">
+
+    </div>
+    <div class="home-right-block">
+
+    </div>
 </body>
 </html>
