--- a/FunMan/authorization/templates/authorization/index.html
+++ b/FunMan/authorization/templates/authorization/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="{% static 'authorization/img/favicon.ico' %}">
   <link rel="stylesheet" href="{% static 'authorization/css/style.css' %}">
   <link href="https://fonts.googleapis.com/css2?family=Ligconsolata:wght@300;400;700&display=swap" rel="stylesheet">
   <title></title>
