--- a/FunMan/home/templates/home/home.html
+++ b/FunMan/home/templates/home/home.html
@@ -64,9 +64,21 @@
         <button class="for-u active-btn">For you</button>
         <button class="follow"> Following</button>
     </div>
+    
+    
     <div class="centre-post-create">
         <div class="first-part-ofpostcre">
             <img src="{% static 'home/img/camera.png' %}" alt="">
+
+            <div class="creating-post-block">
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Опубликовать</button>
+    </form>
+</div>
+
+
             <p>Write something interesting?</p>
         </div>
         <div class="second-part-ofpostcre">
@@ -79,7 +91,31 @@
             <button>Post</button>
         </div>
     </div>
-    <h1 style="position: relative;color: white; top: 20%;">{ Posts }</h1>
+
+
+
+    <!-- <h1 style="position: relative;color: white; top: 20%;">{ Posts }</h1> -->
+    {% for post in posts %}
+    <div class="post-block">
+        <div class="content-in-the-post">
+            <img class="avatar-in-post" src="{% static 'home/img/camera.png' %}" alt="avatar">      
+            <div class="post-content">
+                <div class="post-upside">
+                    <div class="name-user-date">
+                    <h3>{{ post.user }}</h3>
+                        <p>@UserID</p>
+                        <h5 style="font-size: 12px;">.</h5>
+                        {{ post.get_time_since  }}
+                    </div>
+                </div>
+                <p class="content-post">{{ post.content }}</p>
+            </div>
+        </div>
+    </div>
+    {% empty %}
+    <p style="color: white; top: 20%; position: relative;">У вас пока нет постов.</p>
+    {% endfor %}
+
 </div>
 {% endblock %}
 {% block right-block %}
