--- a/FunMan/home/templates/home/index.html
+++ b/FunMan/home/templates/home/index.html
@@ -1,12 +1,13 @@
 
 {% load static %}
+{% load custom_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="{% static 'authorization/img/favicon.ico' %}"> 
-    <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'home/css/style.css' %}?{% cache_boost %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="home-page">
