--- a/FunMan/home/templates/home/home.html
+++ b/FunMan/home/templates/home/home.html
@@ -1,5 +1,6 @@
 {% extends 'home/index.html' %}
 {% load static %}
+{% load custom_tags %}
 
 {% block title %} Home {% endblock %}
 
@@ -70,16 +71,11 @@
         <div class="first-part-ofpostcre">
             <img src="{% static 'home/img/camera.png' %}" alt="">
 
-            <div class="creating-post-block">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Опубликовать</button>
-    </form>
-</div>
-
-
-            <p>Write something interesting?</p>
+            <form method="POST">
+                {% csrf_token %}
+            <p style="width: 100%;">
+                {{ form.content }}
+            </p>
         </div>
         <div class="second-part-ofpostcre">
             <div class="additional-bar">
@@ -87,35 +83,17 @@
                 <img src="{% static 'home/img/emoji-ico.png' %}" alt="">
                 <img src="{% static 'home/img/gif-ico.png' %}" alt="">
                 <img src="{% static 'home/img/calendar-ico.png' %}" alt="">
+                {{ form.tags }}
             </div>
-            <button>Post</button>
+            <button type="submit" id="submit-button" class="disabled" disabled>Post</button>
         </div>
+        </form>
     </div>
-
-
-
-    <!-- <h1 style="position: relative;color: white; top: 20%;">{ Posts }</h1> -->
     {% for post in posts %}
-    <div class="post-block">
-        <div class="content-in-the-post">
-            <img class="avatar-in-post" src="{% static 'home/img/camera.png' %}" alt="avatar">      
-            <div class="post-content">
-                <div class="post-upside">
-                    <div class="name-user-date">
-                    <h3>{{ post.user }}</h3>
-                        <p>@UserID</p>
-                        <h5 style="font-size: 12px;">.</h5>
-                        {{ post.get_time_since  }}
-                    </div>
-                </div>
-                <p class="content-post">{{ post.content }}</p>
-            </div>
-        </div>
-    </div>
+        {% include "includes/_post.html" %}
     {% empty %}
     <p style="color: white; top: 20%; position: relative;">У вас пока нет постов.</p>
     {% endfor %}
-
 </div>
 {% endblock %}
 {% block right-block %}
