--- a/FunMan/home/templates/home/index.html
+++ b/FunMan/home/templates/home/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="{% static 'home/css/style.css' %}?{% cache_boost %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body class="home-page">
-    {% block left-block %}    {% endblock %}
-    {% block center-block %}    {% endblock %}
-    {% block right-block %}    {% endblock %}
-    
+<body>
+    <div class="home-page">
+        {% block left-block %}    {% endblock %}
+        {% block center-block %}    {% endblock %}
+        {% block right-block %}    {% endblock %}
+    </div>
+    {% block add_comment %}    {% endblock %}
 <script src="{% static 'home/js/script.js' %}"></script>
 </body>
 </html>
