--- a/FunMan/authorization/templates/authorization/login.html
+++ b/FunMan/authorization/templates/authorization/login.html
@@ -29,7 +29,7 @@
   <form method="POST">  
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="nextbtn">
+    <button type="submit" class="nextbtn" style="margin-left: 16px;">
         <p>Next</p>
     </button>
   </form>
