--- a/FunMan/authorization/templates/authorization/login.html
+++ b/FunMan/authorization/templates/authorization/login.html
@@ -1,4 +1,5 @@
 {% extends 'authorization/index.html' %}
+{% load socialaccount %}
 {% load static %}
 
 {% block content %} 
@@ -14,14 +15,18 @@
       <img class="imglogo-hedder-of-reg" src="{% static 'authorization/img/v24_18.png' %}" alt="">
   </div>
     <h1>Sign in FunMan</h1>
-  <button class="wgoogle">
-    <img src="{% static 'authorization/img/v44_4.png' %}" alt="">
-    <p>With Google</p>
-  </button>
-  <button class="wgithub">
-    <img src="{% static 'authorization/img/v44_5.png' %}" alt="">
-    <p>With GitHub</p>
-  </button>
+    <a href="{% provider_login_url 'google' %}">
+      <button class="wgoogle">
+        <img src="{% static 'authorization/img/v44_4.png' %}" alt="">
+        <p>With Google</p>
+      </button>
+    </a>
+    <a href="{% provider_login_url 'github' %}">
+      <button class="wgithub">
+        <img src="{% static 'authorization/img/v44_5.png' %}" alt="">
+        <p>With GitHub</p>
+      </button>
+    </a>
   <div class="line-or">
     <hr> <p>or</p> <hr>
   </div>
@@ -34,9 +39,7 @@
     </button>
   </form>
 
-  <button class="fgt-password">
-    <p>Forgot your password?</p>
-  </button>
+  <a href="{% url 'password_reset' %}" class="fgt-password">Forgot your password?</a>
   
 </div>
 {% endblock %}
