--- a/home/templates/home/profile.html
+++ b/home/templates/home/profile.html
@@ -59,36 +59,63 @@
 </div>
 {% endblock %}
 {% block center-block %}
-<div class="home-centre-block">
-    <div class="center-back-line" style="margin-bottom: 0;">
-        <button class="circle-back-btn">
-            <img src="{% static 'home/img/back-btn.png' %}" class="back-btn" alt="">
-        </button>
-        <h4>Profile</h4>
-    </div>
-    <div class="background-profile"></div>        
-    <div class="profile-and-edit-profile">
-        <img class="avatar-in-profile" src="{% static 'home/img/camera.png' %}" alt="">
-        <button class="edit-profile">Edit profile</button>
-    </div>
-    <h2 class="nickname"> {{ user }} </h2>
-    <h2 class="UserID"> @{UserID} </h2>
-    <div class="follows">
-        <p><p1 style="color: white;">{0}</p1> Following</p>
-        <p><p1 style="color: white;">{0}</p1> Followers</p>
-    </div>
+{% if not stranger %}
+    <div class="home-centre-block">
+        <div class="center-back-line" style="margin-bottom: 0;">
+            <button class="circle-back-btn">
+                <img src="{% static 'home/img/back-btn.png' %}" class="back-btn" alt="">
+            </button>
+            <h4>Profile</h4>
+        </div>
+        <div class="background-profile"></div>        
+        <div class="profile-and-edit-profile">
+            <img class="avatar-in-profile" src="{% static 'home/img/camera.png' %}" alt="">
+            <button class="edit-profile">Edit profile</button>
+        </div>
+        <h2 class="nickname"> {{ user }} </h2>
+        <h2 class="UserID"> @{UserID} </h2>
+        <div class="follows">
+            <p><p1 style="color: white;">{0}</p1> Following</p>
+            <p><p1 style="color: white;">{0}</p1> Followers</p>
+        </div>
 
 
-    <div class="post_type--toggle" style="margin-top: 20px;">
-        <a href="?filter=posts" class="toggle-btn {% if filter == 'posts' %}active-btn{% endif %}">Posts</a>
-        <a href="?filter=replies" class="toggle-btn {% if filter == 'replies' %}active-btn{% endif %}">Replies</a>
-        <a href="?filter=media" class="toggle-btn {% if filter == 'media' %}active-btn{% endif %}">Media</a>
-        <a href="?filter=likes" class="toggle-btn {% if filter == 'likes' %}active-btn{% endif %}">Likes</a>
+        <div class="post_type--toggle" style="margin-top: 20px;">
+            <a href="?filter=posts" class="toggle-btn {% if filter == 'posts' %}active-btn{% endif %}">Posts</a>
+            <a href="?filter=media" class="toggle-btn {% if filter == 'media' %}active-btn{% endif %}">Media</a>
+            <a href="?filter=replies" class="toggle-btn {% if filter == 'replies' %}active-btn{% endif %}">Replies</a>
+            <a href="?filter=likes" class="toggle-btn {% if filter == 'likes' %}active-btn{% endif %}">Likes</a>
+        </div>
+        {% include "includes/_post.html" %}
     </div>
-        
-    {% include "includes/_post.html" %}
+{% else %}
+    <div class="home-centre-block">
+        <div class="center-back-line" style="margin-bottom: 0;">
+            <button class="circle-back-btn">
+                <img src="{% static 'home/img/back-btn.png' %}" class="back-btn" alt="">
+            </button>
+            <h4>Profile</h4>
+        </div>
+        <div class="background-profile"></div>        
+        <div class="profile-and-edit-profile">
+            <img class="avatar-in-profile" src="{% static 'home/img/camera.png' %}" alt="">
+            <button class="edit-profile follow-btn" data-user-id="{{ user.id }}" >{% if is_following %}Unfollow{% else %}Follow{% endif %}</button>
+        </div>
+        <h2 class="nickname"> {{ user }} </h2>
+        <h2 class="UserID"> @{UserID} </h2>
+        <div class="follows">
+            <p><p1 style="color: white;">{{ user.following.count }}</p1> Following</p>
+            <p><p1 style="color: white;">{{ user.followers.count }}</p1> Followers</p>
+        </div>
 
-</div>
+
+        <div class="post_type--toggle" style="margin-top: 20px;">
+            <a href="?filter=posts" class="toggle-btn {% if filter == 'posts' %}active-btn{% endif %}">Posts</a>
+            <a href="?filter=media" class="toggle-btn {% if filter == 'media' %}active-btn{% endif %}">Media</a>
+        </div>
+        {% include "includes/_post.html" %}
+    </div>
+{% endif %}
 {% endblock %}
 {% block right-block %}
 <div class="home-right-block">
